src/components/shared/Modal/Modal.module.scss
.overlay {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 999;
  inset: 0;
  height: 100%;
  background-color: rgba($color: #fcfcfc, $alpha: 0.65);
  backdrop-filter: blur(10rem);
  overflow: hidden;
  transition: all var(--transition-time-min) ease;
  opacity: 0;
  pointer-events: none;

  &.open {
    opacity: 1;
    pointer-events: auto;

    .contentWrapper {
      transform: scale(1);
    }
  }
}

.contentWrapper {
  padding: 18rem 40rem 32rem;
  border-radius: 5rem;
  transform: scale(0.65);
  position: relative;
  background-color: rgba($color: #fcfcfc, $alpha: 0.65);
  box-shadow: var(--drop-shadow-button-main-hover);
  backdrop-filter: blur(32rem);

  transition: transform var(--transition-time-min) ease;
}

.closeBtn {
  position: absolute;
  top: 18rem;
  right: 18rem;

  svg {
    width: 12rem;
    height: 12rem;
    * {
      fill: #bdc4d2;
    }
  }
}

